[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Quang Phan <vnphanquang@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
numpy = "^2.1.1"
plotly = "^5.24.1"
polars = "^1.7.1"

[tool.poetry.group.jupyter.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[tool.poetry.group.legacy.dependencies]
pandas = "^2.2.3"
seaborn = "^0.13.2"
pyarrow = "^17.0.0"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

